sort by date and edit names easily and fixed personal shifts spacing and colors fix

--- a/shiftly_client/src/Home/Home.css
+++ b/shiftly_client/src/Home/Home.css
@@ -60,9 +60,16 @@ html, body {
 
     /* text-align: center; */
 
+}
 
+.sort-buttons {
+    align-items: center;
+    vertical-align: middle;
+    flex-direction: row;
+}
 
-
+.orderTiles {
+    height: 70px;
 }
 
 .input-field {
