--- a/shiftly_client/src/Home/SchedulingTile/SchedulingTile.css
+++ b/shiftly_client/src/Home/SchedulingTile/SchedulingTile.css
@@ -45,7 +45,10 @@
 }
 
 #dateOfTable {
-    right: 10px; 
+    position: relative; /* Position the date absolutely */
+    text-align: right; /* Align to the right */
+    right: 5px; /* Align to the right */
+    font-size: 15px;
 }
 
 .icons {
@@ -101,7 +104,7 @@
   }
   
   .sort-buttons button {
-    background-color: #c6c9cc;
+    background-color: #d2d2d2;
     color: #000000;
     border: 2px solid #6d7780;
     padding: 10px 20px;
@@ -111,13 +114,14 @@
     transition: background-color 0.3s, color 0.3s;
     margin-right: 10px;
     width: 150px; /* Set a fixed width for the buttons */
+    height: 50px;
     box-sizing: border-box; /* Include padding and border in the width */
     font-family: Arial, sans-serif; /* Use a web-safe font */
     font-weight: bold; /* Make the text bold */
   }
   
   .sort-buttons button:hover {
-    background-color: #8e9093;
+    background-color: #bebebf;
     border-color: #4a5056;
   }
 
