--- a/shiftly_client/src/ShiftsPage/WeekShifts/Shift/Shift.css
+++ b/shiftly_client/src/ShiftsPage/WeekShifts/Shift/Shift.css
@@ -8,9 +8,10 @@
   color: #000000;
   font-size: x-large;
   font-weight: bold;
-  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   border-radius: 10px; /* Add rounded corners to match the shift */
   overflow: hidden; /* Ensures the scrollbar is contained */
+  vertical-align: middle;
 }
 
 .shift:hover {
@@ -37,6 +38,13 @@
   width: 100%;
   height: 100%;
   /* background-color: rgba(0, 0, 0, 0.025); */
+}
+
+.profession {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  /* transition: transform ease-in-out 0.3s, top ease-in-out 0.3s; */
 }
   
 
