--- a/shiftly_client/src/ShiftsPage/WeekShifts/WeekShifts.css
+++ b/shiftly_client/src/ShiftsPage/WeekShifts/WeekShifts.css
@@ -20,9 +20,9 @@ table {
   margin: auto;
 }
 
-.personalSearch td {
+/* .personalSearch td {
   padding: 5px;
-}
+} */
 
 th,
 td {
